Fix ClassNewInstance